<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartPolicing</string>
    <string name="pref_current_camera">Camera utilizes</string>
    <string name="pref_camera_background">Record automatically</string>
    <string name="pref_location_enabled">Save location</string>
    <string name="widget_go_live">Begin streaming</string>
    <string name="widget_status_text">Status:</string>
    <string name="title_activity_main">SmartPolicing</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authentication">Login to SmartPolicing</string>
    <string name="login_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_cancel">Cancel</string>
    <string name="login_go">Login</string>
    <string name="logout">Logout</string>
    <string name="force_upload">Begin upload</string>
    <string name="dialog_upload_no_network">There\'s no active bandwidth to send data</string>
    <string name="dialog_upload_not_enable">Can not upload right now. Try again later.</string>
    <string name="dialog_upload_not_charging">The device must be charging</string>
    <string name="login_title">Login to SmartPolicing</string>
    <string name="status_online">Connected</string>
    <string name="status_offline">No network</string>
    <string name="start_upload">Start upload of videos and locations? This action will stop video\'s recording.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="notification_upload_title">Smart Policing Upload</string>
    <string name="notification_upload_description">Uploading data...</string>
    <string name="notification_location_title">SmartPolicing Location</string>
    <string name="notification_location_description">Recording GPS data</string>
    <string name="notification_record_title">Smart Policing Camera</string>
    <string name="notification_record_description">Recording on SDCard</string>
    <string name="title_activity_lock_streen">LockStreenActivity</string>
    <string name="title_activity_bar">BarActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="status_uploading">Uploading</string>
    <string name="unauthorized_login">Login or Password invalid</string>
    <string name="no_server_login">Unable to contact the server</string>
    <string name="lock_text_recording">Recording</string>
    <string name="lock_text_livestreaming">Livestreaming</string>
    <string name="lock_text_recording_offline">Livestreaming unavailable</string>
    <string name="lock_text_uploading">Uploading</string>
    <string name="upload_progress">Uploading...</string>
    <string name="headquarter_desc">Headquarter</string>
    <string name="phone_desc">Phone</string>
    <string name="upload_progress_info">Uploading %1$d from %2$d</string>
    <string name="upload_progress_finish">Files Uploaded</string>
    <string name="pause">Pause Temporarily</string>
    <string name="five_minutes">5\nminutes</string>
    <string name="ten_minutes">10\nminutes</string>
    <string name="countdown_info">Missing %1$d seconds</string>
    <string name="pause_state">Recording Paused</string>
    <string name="click_login">Click on the right to login</string>
    <string name="status_paused">Paused temporarily</string>
    <string name="widget_upload_info_start">Uploading files to server</string>
    <string name="widget_upload_title">Uploading</string>
    <string name="widget_streaming_title">Streaming</string>
    <string name="widget_paused_title">Paused</string>
    <string name="widget_active_title">Active</string>
    <string name="widget_paused_info">Paused temporarily</string>
    <string name="widget_logged_time_info">Logged in for %1$s minutes</string>
    <string name="action_waiting_error">Try again in a few seconds.</string>

</resources>
