<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="150dp"
    android:layout_height="150dp"
    android:baselineAligned="false"
    style="@style/MainContent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="150dp"
        android:layout_height="70dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_minutes"
            android:id="@+id/ten_minutes_button"
            android:layout_gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_minutes"
            android:id="@+id/five_minutes_button"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel_button"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</LinearLayout>